# tf_vad

./: .gitignore  .gitmodules  CMakeLists.txt  config.py  inference.py  requirements.txt  train.py
inference_src/: api.h  inference.cpp  inference_lib.cpp  inference_naive.cpp  inference_neon.cpp  inference_tflite.cpp  simd_math.h  testApp.cpp
processing/: darpa_timit.py  data_utils.py  preprocess.py
